--- a/pdf/src/app/app.component.css
+++ b/pdf/src/app/app.component.css
@@ -16,7 +16,10 @@
     background-color: #506485;
 
 }
-
+a{
+    text-decoration: none;
+    color: aliceblue;
+}
 .popup span
 {
     display: block;
