--- a/pdf/src/app/bottom/bottom.component.html
+++ b/pdf/src/app/bottom/bottom.component.html
@@ -1,10 +1,6 @@
 
 <div class="left">
-    <div class="search">
-        <input style="height: 30px;padding: 0;width: 300px;" placeholder="Search Items Here" type="text" ngModel
-            (input)="onChange(sval.value)" #sval><img src="assets/image/search.png"
-            style="height: 30px;padding:5px;margin-top: -4px;">
-    </div>
+   
 
     <div class="table">
         <table>
@@ -35,7 +31,7 @@
                             *ngIf="row.add==1" (click)="deleteToList(row_1)"><img src="assets/image/add.png" (click)="addToList(row_1)"
                             style="height: 25px;padding-top: 4px;padding-bottom: 4px;" *ngIf="row.add==0"></td>
                     <td style=" text-align: center;"><img src="assets/image/edit.png" style="height: 25px;" (click)=updateList(row_1)></td>
-                    <td style=" text-align: center;"><img src="assets/image/info.png" style="height: 25px;"></td>
+                    <td style=" text-align: center;"><img src="assets/image/info.png" style="height: 25px;" (click)="info(row_1)"></td>
             </tbody>
         </table>
     </div>
@@ -93,3 +89,54 @@
 <div #preview class="collapse" style="position: absolute;top: 0;text-align: center;width: 100%;height:100vh;background-color: black;">
 <app-preview (eventToParent)="gen_pdf()" (eventToParent1)="cancel()" [table]="tables" [name]="name" style="text-align: center;width: 100%;"></app-preview>
 </div>
+
+
+
+
+
+
+<div #box class="dialog1 collapse" style="height: 100vh;width: 100%;">
+  
+    <div class="popup1">
+      <p style="background-color: aqua;padding-left: 20px;padding-bottom: 5px;padding-top: 5px; font-weight: bold;">
+        {{pName}}</p>
+      <button (click)="close1()"
+        style="position: absolute;top: 0;right: 0;height: 30px;  border-style: none;background-color: aqua;">
+        <fa-icon [icon]="faClose" size="1x"></fa-icon>
+      </button><br>
+      <br>
+  
+      <div class="table1">
+        <table>
+            <thead>
+    
+                <tr style="background-color: rgb(87, 35, 26);">
+                   
+                    <td style="padding-left: 5px;">Date</td>
+                    <td style="padding-left: 5px;">Quantity</td>
+                    
+                    <td style=" text-align: center;">Retail Price</td>
+                    <td style="padding-left: 5px;">Wholesale Price</td>
+                    
+                    <td style=" text-align: center;">Purchase Price</td>
+                   
+                </tr>
+            </thead>
+            <tbody>
+    
+                <tr *ngFor="let row of infos;let i=index" [attr.row-index]="i" #row_1>
+                    <td style="padding-left: 5px;">{{row.date}}</td>
+                    
+                    <td #pid>{{row.quan}}</td>
+                    <td style="padding-left: 5px;">{{row.reta}}</td>
+                    <td style="padding-left: 5px;">{{row.whol}}</td>
+                    <td style="padding-left: 5px;">{{row.purc}}</td>
+                    
+                  
+            </tbody>
+        </table>
+    </div>
+  
+    </div>
+  
+  </div>
