--- a/pdf/src/app/preview/preview.component.html
+++ b/pdf/src/app/preview/preview.component.html
@@ -3,12 +3,12 @@
 <div style="position:relative;margin-left: auto;margin-right: auto;min-height: calc(29.7cm - 115px - 63px); width: 21cm;margin-bottom: 0;margin-top: 8px;background-color: white">
 <header  id="pageHeader" style="text-align: center;color: blue;margin-left: auto;margin-right: auto; width: 21cm;margin-bottom: 0;margin-top: 0;">
    <img style="height: 50px;width: 50px;border-radius: 25px;margin-top: -6px;" src="assets/image/sai.png"> <span style="font-size: 30px;"> Sai Krupa Medical</span>
-<div style="width: 80%; margin-right: auto;margin-left: auto;margin-top: 5px;">
-    <p style="margin-bottom: 4px;float: left;width: 50%;">Dhanani Nagar,Shigaon Road</p>
+<div style="width: 88%; margin-right: auto;margin-left: auto;margin-top: 5px;">
+    <p style="margin-bottom: 4px;float: left;width: 50%;">Shop No.2,Nanudas Manidas Chawl,Sant Rohidas</p>
     
-    <p style="margin-bottom: 4px;float: right;width: 50%;">Mob No.:9370042249</p>
-    <p style="margin-bottom: 4px;float: left;width: 50%;">Boisar(East),Palghar - 401501</p>
-    <p style="margin-bottom: 4px;float: right;width: 50%;">Email:dharm8149@gmail.com</p></div>
+    <p style="margin-bottom: 4px;float: right;width: 50%;">Mob No.:9769697239 / 9892193421</p>
+    <p style="margin-bottom: 4px;float: left;width: 50%;"> Marg,Kranti Nagar,Kala Killa,Dharavi,Mumbai 17</p>
+    <p style="margin-bottom: 4px;float: right;width: 50%;">Email:saikrupamedical74@gmail.com</p></div>
 
 <p style="clear: both;border-bottom: 2px solid blue;"></p>
 </header>
